--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> PEMULIHAN AKUN FACEBOOK</title>
-  <meta property="og:title" content="🔒 PEMULIHAN AKUN FACEBOOK">
+  <meta property="og:title" content="PEMULIHAN AKUN FACEBOOK🔓">
 <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/3064/3064197.png">
   <style>
     * {
